# bitrotSim

./: .gitignore  .pylintrc  README.md  pyproject.toml
pyvidcorrupt/: __init__.py  __main__.py  main.py  random_gray.py  shifter.py
tests/: test_pyvidcorrupt.py
